[package]
edition = "2021"
name = "print-no-std"
version = "0.2.0"
rust-version = "1.82"
authors = ["warlock <internalmike@gmail.com>"]
description = "The `print`/`eprint` macros for no_std Windows/Linux/UNIX/DOS apps."
readme = "README.md"
documentation = "https://docs.rs/print-no-std/"
keywords = ["print", "no_std", "unix", "windows", "linux"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/print-no-std"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[target.'cfg(not(target_os="dos"))'.dependencies]
errno-no-std = { version = "0.2.2", default-features = false }

[target.'cfg(all(not(target_os="dos"), windows))'.dependencies]
iter-identify_first_last = { version = "0.2.1", default-features = false }
winapi = { version = "0.3.9", features = ["consoleapi", "handleapi", "processenv"] }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.153", default-features = false }

[target.'cfg(target_os="dos")'.dependencies]
dos-cp = { version = "0.7.0", default-features = false, features = ["load"] }
