[package]
edition = "2021"
name = "hworld"
version = "0.0.0"
publish = false

[lints.rust]
unexpected_cfgs = { level = "allow" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
panic-no-std = "0.1.0"
panicking = { version = "0.5.0", default-features = false, features = ["abort"] }
pc-atomics = "0.0.2"
print-no-std = { path = "../.." }
rlibc-ext = "0.1.0"

[target.'cfg(target_os="dos")'.dependencies]
dos-cp = { version = "0.7.0", default-features = false, features = ["load"] }

[build-dependencies]
dos-cp-generator = "0.7.0"
